// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 75px;
  height: 14px;
}

.c1 {
  width: 75px;
  height: 14px;
  border-radius: 100%;
  -webkit-animation: cHDNma 1.3s ease infinite;
  animation: cHDNma 1.3s ease infinite;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
}

.c2 {
  width: 75px;
  height: 14px;
  border-radius: 100%;
  -webkit-animation: cHDNma 1.3s ease infinite;
  animation: cHDNma 1.3s ease infinite;
  -webkit-animation-delay: 0.30000000000000004s;
  animation-delay: 0.30000000000000004s;
}

.c3 {
  width: 75px;
  height: 14px;
  border-radius: 100%;
  -webkit-animation: cHDNma 1.3s ease infinite;
  animation: cHDNma 1.3s ease infinite;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div
      className="c1"
    />
    <div
      className="c2"
    />
    <div
      className="c3"
    />
  </div>
</div>
`;

exports[`should render with optional props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 45px;
  height: 10px;
}

.c1 {
  width: 75px;
  height: 14px;
  border-radius: 100%;
  -webkit-animation: cHDNma 1.3s ease infinite;
  animation: cHDNma 1.3s ease infinite;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
}

.c2 {
  width: 75px;
  height: 14px;
  border-radius: 100%;
  -webkit-animation: cHDNma 1.3s ease infinite;
  animation: cHDNma 1.3s ease infinite;
  -webkit-animation-delay: 0.30000000000000004s;
  animation-delay: 0.30000000000000004s;
}

.c3 {
  width: 75px;
  height: 14px;
  border-radius: 100%;
  -webkit-animation: cHDNma 1.3s ease infinite;
  animation: cHDNma 1.3s ease infinite;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div
      className="c1"
    />
    <div
      className="c2"
    />
    <div
      className="c3"
    />
  </div>
</div>
`;
